# GAOL

./: CMakeLists.txt  Makefile.in  configure  configure.ac  gaolConfig.cmake.in
3rd/: unistd.h
check/: CMakeLists.txt  Makefile.in  trigonometric.cpp
doc/: Makefile.in
examples/: Makefile.in
gaol/: CMakeLists.txt  Makefile.in  gaol  gaol_allocator.h  gaol_config.h  gaol_config_mingw.h  gaol_config_msvc.h  gaol_configuration.h.in  gaol_double_op_apmathlib.h  gaol_exact.c  gaol_exact.h  gaol_exceptions.h  gaol_fpu_fenv.h  gaol_interval.h  gaol_interval2f.h  gaol_port.h  gaol_version.h  gaol_version_mingw.h  gaol_version_msvc.h
